# TB_Bangladesh

./: .gitignore  README.md  main.py  pyproject.toml
outputs/latex/: TB_Bangladesh_Appendix.tex  table1_burden.tex  table1a_overview.tex  table1b_risk_profiles.tex  table2_dataset.tex  table2_notifications.tex  table3_descriptive_stats.tex  table3_outcomes.tex  table4_division_cumulative.tex  table5_socioeconomic.tex  table6_environmental.tex  table7_division_incidence.tex  table8_risk_factors.tex
src/: styles.py  workbook.py
src/builders/: burden.py  demographics.py  division.py  environmental.py  figures.py  hivtb.py  latex_tables.py  maps.py  notifications.py  outcomes.py  risk_factors.py  socioeconomic.py  sources.py
src/fetchers/: climate.py  local.py  who.py  worldbank.py
