[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tb-bangladesh"
version = "0.1.0"
description = "Data pipeline for TB in Bangladesh review paper"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1",
    "requests>=2.32",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pandas>=2.2",
    "numpy>=1.26",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyogrio>=0.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
build-excel = "main:main"
